Update to incorporate Pin Change Interrupts.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 default_envs = attiny84
 
 [env]
-lib_deps = Servo
+lib_deps = 
+	Servo
+	nicohood/PinChangeInterrupt
 
 [env:uno]
 platform = atmelavr
